# learning-ai-with-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: neural_network.ipynb
