[project]
name = "learning-ai-with-python"
version = "0.1.0"
description = "A Python and JupyterLab environment for learning AI technology."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "rich>=13.9.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.0",
    "pre-commit>=4.0.0",
    "ruff>=0.12.0",
    "ty>=0.0.1a14",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = [".ipynb_checkpoints"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
